tests/valid/functions/no_arg.rs
/*
return: 3
*/

three(): int{
    return 3;
}

main(): int {
    return three();
}