tests/invalid/binary_operators/missing_first_op.rs
/*
fail: 1
*/

main(): int {
    return /3;
}